# shooter

./: .gitignore  Cargo.toml  README.md  in.vim  notes.txt  prepare-commit-msg  project.txt  rusty-tags.vi  start.vim
assets/: littleman.glb  littleman1.glb
src/: main.rs
src/client/: mod.rs
src/config/: mod.rs
src/input_n_state/: mod.rs
src/menu/: mod.rs
src/players/: mod.rs
src/server/: mod.rs
