[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.27.0"
bevy_app = "0.14.2"
bevy_ecs = "0.14.2"
bevy_egui = "0.30.0"
bevy_input = "0.14.2"
bevy_math = "0.14.2"
bevy_state = "0.14.2"
bevy_transform = "0.14.2"
dirs = "5.0.1"
egui = "0.29.1"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
bevy_renet = "0.0.12"
renetcode = "0.0.12"
