[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.28.0"
dirs = "5.0.1"
egui = "0.29.1"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
bevy_renet = "0.0.12"
renetcode = "0.0.12"
regex = "1.11.1"
bevy_egui = "0.31.1"
